force-app/main/default/objects/VS_SalesPlanItem__c/VS_SalesPlanItem__c.object-meta.xml
<CustomObject>
    <description>SalesPlan을 구성하는 견적모델 단위 정보를 관리하는 Summary Obj</description>
    <label>SalesPlanItem</label>
    <nameField>
        <displayFormat>SPS-{0000000000}</displayFormat>
        <label>SalesPlanSummary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesPlanItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>