force-app/main/default/objects/VS_SalesPlanItem__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <description>법인 정보 picklist</description>
    <label>Corporate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VU00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>