force-app/main/default/objects/VS_SalesPlanItem__c/fields/EOP__c.field-meta.xml
<CustomField>
    <fullName>EOP__c</fullName>
    <label>EOP</label>
    <type>Date</type>
</CustomField>