force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AveragePrice__c.field-meta.xml
<CustomField>
    <fullName>fm_AveragePrice__c</fullName>
    <formula>ru_TotalAmount__c  /  ru_TotalQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>