force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice10th__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice10th__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty10th__c), 0, ru_PlanAmt10th__c /  ru_PlanQty10th__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price(10th)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>