force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice1st__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice1st__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty1st__c), 0, ru_PlanAmt1st__c /  ru_PlanQty1st__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price (1st)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>