force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice2nd__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice2nd__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty2nd__c ), 0, ru_PlanAmt2nd__c / ru_PlanQty2nd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price(2nd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>