force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice3rd__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice3rd__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty3rd__c), 0, ru_PlanAmt3rd__c /  ru_PlanQty3rd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price(3rd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>