force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice4th__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice4th__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty4th__c), 0, ru_PlanAmt4th__c /  ru_PlanQty4th__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price(4th)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>