force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_AvgPrice5th__c.field-meta.xml
<CustomField>
    <fullName>fm_AvgPrice5th__c</fullName>
    <formula>IF( ISBLANK(ru_PlanQty5th__c), 0, ru_PlanAmt5th__c /  ru_PlanQty5th__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price(5th)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>