force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_OpportunityItemName__c.field-meta.xml
<CustomField>
    <fullName>fm_OpportunityItemName__c</fullName>
    <formula>l_OpportunityItem__r.Name</formula>
    <label>OpportunityItemName</label>
    <type>Text</type>
</CustomField>