force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectName__c</fullName>
    <formula>l_SalesPlan__r.l_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>