force-app/main/default/objects/VS_SalesPlanItem__c/fields/fm_QuoteName__c.field-meta.xml
<CustomField>
    <fullName>fm_QuoteName__c</fullName>
    <formula>l_SalesPlan__r.l_Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>