force-app/main/default/objects/VS_SalesPlanItem__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <description>거래조건</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>