force-app/main/default/objects/VS_SalesPlanItem__c/fields/l_SalesPlan__c.field-meta.xml
<CustomField>
    <fullName>l_SalesPlan__c</fullName>
    <description>SalesPlan Lookup</description>
    <label>SalesPlan</label>
    <referenceTo>VS_SalesPlan__c</referenceTo>
    <relationshipLabel>SalesPlanItems</relationshipLabel>
    <relationshipName>SalesPlanSummarys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>