force-app/main/default/objects/VS_SalesPlanItem__c/fields/ProductionType__c.field-meta.xml
<CustomField>
    <fullName>ProductionType__c</fullName>
    <description>생산 형태</description>
    <label>Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EAVH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>