force-app/main/default/objects/VS_SalesPlanItem__c/fields/ProfitabilityItemName__c.field-meta.xml
<CustomField>
    <fullName>ProfitabilityItemName__c</fullName>
    <description>수익성 요청을 위한 견적아이템명</description>
    <label>Profitability Item Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>