force-app/main/default/objects/VS_SalesPlanItem__c/fields/ru_cntDetail__c.field-meta.xml
<CustomField>
    <fullName>ru_cntDetail__c</fullName>
    <label>cntDetail</label>
    <summaryForeignKey>VS_SalesPlanDetail__c.l_SalesPlanItem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>