force-app/main/default/objects/VS_SalesPlanItem__c/fields/ru_PlanAmt4th__c.field-meta.xml
<CustomField>
    <fullName>ru_PlanAmt4th__c</fullName>
    <label>Plan Amount(4th)</label>
    <summarizedField>VS_SalesPlanDetail__c.PlanAmount__c</summarizedField>
    <summaryFilterItems>
        <field>VS_SalesPlanDetail__c.NoOfYears__c</field>
        <operation>equals</operation>
        <value>4</value>
    </summaryFilterItems>
    <summaryForeignKey>VS_SalesPlanDetail__c.l_SalesPlanItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>