force-app/main/default/objects/VS_SalesPlanItem__c/fields/ru_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalAmount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>VS_SalesPlanDetail__c.PlanAmount__c</summarizedField>
    <summaryForeignKey>VS_SalesPlanDetail__c.l_SalesPlanItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>