force-app/main/default/objects/VS_SalesPlanItem__c/fields/ru_TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>VS_SalesPlanDetail__c.PlanQty__c</summarizedField>
    <summaryForeignKey>VS_SalesPlanDetail__c.l_SalesPlanItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>