force-app/main/default/objects/VS_SalesPlanItem__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <label>SOP</label>
    <required>true</required>
    <type>Date</type>
</CustomField>